Fixed Userindex alignment

--- a/stackoverflow/src/scss/partials/_register.scss
+++ b/stackoverflow/src/scss/partials/_register.scss
@@ -20,3 +20,7 @@ button.btn.btn-primary:hover{
   background: #039A59;
   border: 1px solid #ffffff;
 }
+
+div.row{
+  padding-bottom: 10px;
+}
